--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/query-persist-client-core": "^5.80.7",
+    "@tanstack/query-sync-storage-persister": "^5.80.7",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-query-devtools": "^5.80.7",
     "@tanstack/react-query-persist-client": "^5.80.7",
@@ -22,7 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.10"
   },
